[package]
name = "advent_code_2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
dendron = "0"
itertools = "0"
thiserror = "1"
nom = "7"
nom-supreme = "0"
nom_locate = "4"
miette = { version = "5", features = ["fancy"] }

[dev-dependencies]
parameterized = "1"
spectral = "0"
